# aixtract

./: CITATION.cff  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
src/aixtract/: __init__.py  __main__.py  _version.py
src/aixtract/cli/: main.py
src/aixtract/converters/: __init__.py  _markitdown.py  archive.py  audio.py  base.py  docx.py  epub.py  html.py  image.py  pdf.py  pptx.py  text.py  xlsx.py
src/aixtract/core/: detector.py  engine.py  normalizer.py  registry.py
src/aixtract/models/: __init__.py  config.py  result.py
src/aixtract/utils/: __init__.py  chunking.py  deps.py  filename.py  logging.py  markdown.py  parallel.py  tokens.py
tests/: test_phase5_utils.py
tests/integration/: test_cli.py  test_integration.py
tests/unit/: test_core.py  test_models.py
tests/unit/test_converters/: test_all_converters.py
tests/unit/test_utils/: test_all_utils.py
